--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=5.3.0"
     },
-    "license": "free",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "CodingSniper\\MysqlBackup\\": "src/"
